--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     </header>
     <main>
         <section class="intro">
-            <img src="images/your-photo.jpg" alt="Tara P. Menon">
+            <img src="your-photo.jpg" alt="Tara P. Menon">
             <div class="intro-text">
                 <h1>Hi, I'm Tara P. Menon.</h1>
                 <p>MD Candidate @ Virginia Tech Carilion School of Medicine</p>
                 <p>I'm an aspiring surgeon-innovator interested in optimizing technology and biotech for clinical or translational therapies and medical devices. Journalist on the side.</p>
                 <div class="buttons">
-                    <a href="images/CVTaraPattilachan_5-30.pdf" class="btn cv" target="_blank">CV</a>
+                    <a href="CVTaraPattilachan_5-30.pdf" class="btn cv" target="_blank">CV</a>
                     <a href="publications.html" class="btn publications">Publications</a>
                     <a href="#projects" class="btn projects">Projects</a>
                 </div>
@@ -42,10 +42,10 @@
     <footer>
         <p>Contact me at <a href="mailto:tarapattilachan@gmail.com">tarapattilachan@gmail.com</a></p>
         <div class="social-media">
-            <a href="https://x.com/tmenon12" target="_blank"><img src="images/twitter-icon.png" alt="Twitter"></a>
-            <a href="https://www.instagram.com/taramenons/" target="_blank"><img src="images/instagram-icon.png" alt="Instagram"></a>
-            <a href="https://www.linkedin.com/in/tmenon/" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
-            <a href="https://scholar.google.com/citations?user=r0YZgu0AAAAJ&hl=en" target="_blank"><img src="images/google-scholar-icon.png" alt="Google Scholar"></a>
+            <a href="https://x.com/tmenon12" target="_blank"><img src="twitter-icon.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/taramenons/" target="_blank"><img src="instagram-icon.png" alt="Instagram"></a>
+            <a href="https://www.linkedin.com/in/tmenon/" target="_blank"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+            <a href="https://scholar.google.com/citations?user=r0YZgu0AAAAJ&hl=en" target="_blank"><img src="google-scholar-icon.png" alt="Google Scholar"></a>
         </div>
     </footer>
 </body>
