--- a/publications.html
+++ b/publications.html
@@ -91,10 +91,10 @@
     <footer>
         <p>Contact me at <a href="mailto:tarapattilachan@gmail.com">tarapattilachan@gmail.com</a></p>
         <div class="social-media">
-            <a href="https://twitter.com/yourprofile" target="_blank"><img src="images/twitter-icon.png" alt="Twitter"></a>
-            <a href="https://instagram.com/yourprofile" target="_blank"><img src="images/instagram-icon.png" alt="Instagram"></a>
-            <a href="https://linkedin.com/in/yourprofile" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
-            <a href="https://scholar.google.com/citations?user=yourprofile" target="_blank"><img src="images/google-scholar-icon.png" alt="Google Scholar"></a>
+            <a href="https://x.com/tmenon12" target="_blank"><img src="twitter-icon.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/taramenons/" target="_blank"><img src="instagram-icon.png" alt="Instagram"></a>
+            <a href="https://www.linkedin.com/in/tmenon/" target="_blank"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+            <a href="https://scholar.google.com/citations?user=r0YZgu0AAAAJ&hl=en" target="_blank"><img src="google-scholar-icon.png" alt="Google Scholar"></a>
         </div>
     </footer>
 </body>
