--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="intro-text">
                 <h1>Hi, I'm Tara P. Menon.</h1>
                 <p>MD Candidate @ Virginia Tech Carilion School of Medicine</p>
-                <p>I'm an aspiring surgeon-innovator interested in optimizing technology and biotech for clinical or translational therapies and medical devices. Journalist on the side.</p>
+                <p>I'm an aspiring physician-innovator interested in optimizing technology and biotech for clinical or translational therapies and medical devices. Journalist on the side.</p>
                 <div class="buttons">
                     <a href="CVTaraPattilachan_5-30.pdf" class="btn cv" target="_blank">CV</a>
                     <a href="publications.html" class="btn publications">Publications</a>
@@ -45,7 +45,7 @@
         </section>
     </main>
     <footer>
-        <p>Contact me at <a href="mailto:tarapattilachan@gmail.com">tarapattilachan@gmail.com</a></p>
+        <p>Contact me at <a href="mailto:tarapattilachan@gmail.com">tarapattilachan@gmail.com or tarapm@vt.edu</a></p>
         <div class="social-media">
             <a href="https://x.com/tmenon12" target="_blank"><img src="twitter-icon.png" alt="Twitter"></a>
             <a href="https://www.instagram.com/taramenons/" target="_blank"><img src="instagram-icon.png" alt="Instagram"></a>
