--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p>MD Candidate @ Virginia Tech Carilion School of Medicine</p>
                 <p>I'm an aspiring physician-innovator interested in optimizing technology and biotech for clinical or translational therapies and medical devices. Journalist on the side.</p>
                 <div class="buttons">
-                    <a href="CVTaraPattilachan_5-30.pdf" class="btn cv" target="_blank">CV</a>
+                    <a href="VTCSOM-TaraPM-CV0213forgithub.pdf" class="btn cv" target="_blank">CV</a>
                     <a href="publications.html" class="btn publications">Publications</a>
                     <a href="#projects" class="btn projects">Projects</a>
                 </div>
